cargo-features = ["edition2024"]

[package]
name = "sango-bat"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
log = "0.4.20"
toml = "0.5"
pretty_env_logger = "0.5.0"
serde_derive = "1.0"
serde_json = "1.0"
serde = {version="1.0", features=["rc"]}
rustc-hash = "1.1.0"
error-chain = "0.12.4"

[build-dependencies]
prost-build = { version = "0.12" }
toml = "0.5"
